--- a/_includes/projects.liquid
+++ b/_includes/projects.liquid
@@ -12,7 +12,8 @@
         %}
       {% endif %}
       <div class="card-body">
-        <h2 class="card-title text-lowercase">{{ project.title }}</h2>
+<!--        <h2 class="card-title text-lowercase">{{ project.title }}</h2> -->
+      <h4 class="card-title">{{ project.title }}</h4> 
         <p class="card-text">{{ project.description }}</p>
         <div class="row ml-1 mr-1 p-0">
           {% if project.github %}
