--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -10,6 +10,17 @@ layout: default
       {% else %}
         {{ site.title }}
       {% endif %}
+
+              
+          <a
+            href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="float-right"
+            ><i class="fa-solid fa-file-pdf"></i
+          ></a>
+     
+
     </h1>
     <p class="desc">{{ page.subtitle }}</p>
   </header>
