--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -15,7 +15,7 @@ layout: default
             target="_blank"
             rel="noopener noreferrer"
             class="float-right"
-            ><i class="fa-solid fa-file-pdf"></i></a>
+            ><i class="fa-solid fa-file-pdf">resume</i></a>
      
     </h1>
     <p class="desc">{{ page.subtitle }}</p>
