--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -15,10 +15,16 @@ layout: default
             target="_blank"
             rel="noopener noreferrer"
             class="float-right"
-            ><i class="fa-solid fa-file-pdf">resume</i></a>
+            >cv-><i class="fa-solid fa-file-pdf"></i></a>
      
     </h1>
     <p class="desc">{{ page.subtitle }}</p>
+    <p class="desc">          <a
+            href="{{ page.cv_pdf | prepend: 'assets/pdf/CV-2024-TH.pdf' | relative_url}}"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="float-right"
+            >CV<i class="fa-solid fa-file-pdf"></i></a></p>
   </header>
 
   <article>
