--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -7,6 +7,7 @@ layout: default
       {% if site.title == 'blank' %}
         <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
         <span class="font-weight-bold">{{ site.last_name }}</span>
+        &nbsp;&nbsp;&nbsp;&nbsp;
         <a
             href="{{ page.cv_pdf | prepend: 'assets/pdf/CV-2024-TH.pdf' | relative_url}}"
             target="_blank"
