--- a/_includes/projects.liquid
+++ b/_includes/projects.liquid
@@ -11,7 +11,7 @@
           alt="project thumbnail"
         %}
       {% endif %}
-      <div class="card-body" height: 500 px>
+      <div class="card-body" style="height: 500 px;">
 <!--        <h2 class="card-title text-lowercase">{{ project.title }}</h2> -->
       <h4 class="card-title">{{ project.title }}</h4> 
         <p class="card-text">{{ project.description | truncatewords: 30, '...' }}</p>
