--- a/_includes/projects_horizontal.liquid
+++ b/_includes/projects_horizontal.liquid
@@ -2,14 +2,15 @@
   <a href="{% if project.redirect %}{{ project.redirect }}{% else %}{{ project.url | relative_url }}{% endif %}">
     <div class="card hoverable">
       <div class="row g-0">
-        <div class="card-img col-md-6" style="width: 20%;">
-          {% include figure.liquid loading="eager" path=project.img  alt="project thumbnail" %}
-        </div>
+        {% if project.img %}
+          <div class="card-img col-md-6" style="width: 20%;">
+            {% include figure.liquid loading="eager" path=project.img sizes="(min-width: 768px) 156px, 50vw" alt="project thumbnail" %}
+          </div>
+        {% endif %}
         <div class="card-body" style="width: 80%;">
           <h4 class="card-title text-lowercase">{{ project.title }}</h4>
           <p class="card-text">{{ project.description }}</p>
         </div>
-
       </div>
     </div>
   </a>
