--- a/_includes/projects_horizontal.liquid
+++ b/_includes/projects_horizontal.liquid
@@ -4,10 +4,10 @@
       <div class="row g-0">
         {% if project.img %}
           <div class="card-img col-md-6" style="width: 20%;">
-            {% include figure.liquid loading="eager" path=project.img  alt="project thumbnail" %}
+            {% include figure.liquid loading="eager" path=project.img sizes="(min-width: 768px) 156px, 50vw" alt="project thumbnail" %}
           </div>
         {% endif %}
-        <div class="col-md-6" style="width: 80%;">
+        <div class="{% if project.img %}col-md-6{% else %}col-md-12{% endif %}" style="width: {% if project.img %}80%{% else %}100%{% endif %};">
           <div class="card-body">
             <h4 class="card-title text-lowercase">{{ project.title }}</h4>
             <p class="card-text">{{ project.description }}</p>
