--- a/_includes/projects_horizontal.liquid
+++ b/_includes/projects_horizontal.liquid
@@ -3,13 +3,13 @@
     <div class="card hoverable">
       <div class="row g-0">
         {% if project.img %}
-          <div class="card-img col-md-6" style="width: 20%;">
+          <div class="card-img col-md-6">
             {% include figure.liquid loading="eager" path=project.img sizes="(min-width: 768px) 156px, 50vw" alt="project thumbnail" %}
           </div>
         {% endif %}
-        <div class="{% if project.img %}col-md-6{% else %}col-md-12{% endif %}" style="width: {% if project.img %}80%{% else %}100%{% endif %};">
+        <div class="{% if project.img %}col-md-6{% else %}col-md-12{% endif %}">
           <div class="card-body">
-            <h4 class="card-title text-lowercase">{{ project.title }}</h4>
+            <h3 class="card-title text-lowercase">{{ project.title }}</h3>
             <p class="card-text">{{ project.description }}</p>
           </div>
         </div>
