--- a/_includes/projects_horizontal.liquid
+++ b/_includes/projects_horizontal.liquid
@@ -2,7 +2,11 @@
   <a href="{% if project.redirect %}{{ project.redirect }}{% else %}{{ project.url | relative_url }}{% endif %}">
     <div class="card hoverable">
       <div class="row g-0">
-
+        {% if project.img %}
+          <div class="card-img col-md-6" style="width: 20%">
+            {% include figure.liquid loading="eager" path=project.img sizes="(min-width: 768px) 156px, 50vw" alt="project thumbnail" %}
+          </div>
+        {% endif %}
         <div class="{% if project.img %}col-md-6{% else %}col-md-12{% endif %}">
           <div class="card-body">
             <h3 class="card-title text-lowercase">{{ project.title }}</h3>
