--- a/_includes/projects_horizontal.liquid
+++ b/_includes/projects_horizontal.liquid
@@ -3,7 +3,7 @@
     <div class="card hoverable">
       <div class="row g-0">
         {% if project.img %}
-          <div class="card-img col-md-6" style="width: 20%">
+          <div class="card-img col-md-3">
             {% include figure.liquid loading="eager" path=project.img  alt="project thumbnail" %}
           </div>
         {% endif %}
