--- a/_includes/projects_horizontal.liquid
+++ b/_includes/projects_horizontal.liquid
@@ -3,11 +3,11 @@
     <div class="card hoverable">
       <div class="row g-0">
         {% if project.img %}
-          <div class="card-img col-md-3">
+          <div class="card-img col-md-3" style="width: 20%">
             {% include figure.liquid loading="eager" path=project.img  alt="project thumbnail" %}
           </div>
         {% endif %}
-        <div class="{% if project.img %}col-md-9{% else %}col-md-12{% endif %}">
+        <div class="{% if project.img %}col-md-6{% else %}col-md-12{% endif %}">
           <div class="card-body">
             <h3 class="card-title text-lowercase">{{ project.title }}</h3>
             <p class="card-text">{{ project.description }}</p>
